--- a/rocksdb/rocksdb.config
+++ b/rocksdb/rocksdb.config
@@ -5,24 +5,17 @@
 #===============================================
 
 # Used for the SLOS for non-transparent checkpointing
-CKPTDISKS="nvd0 nvd1"
-
-# Used for the WAL for non-transparent checkpointing
-WALDISKS="nvd2 nvd3"
+CKPTDISKS="$DISK1 $DISK2"
 
 # Path for the SLOS
 CKPTSTRIPE="st0"
 DISKPATH="/dev/stripe/st0"
 
-# Path for the WAL
-WALSTRIPE=""
-WALPATH="/dev/nvd1"
-
 #===============================================
 #		COMMON
 #===============================================
 
-ALLDISKS="nvd0 nvd1"
+ALLDISKS="$DISK1 $DISK2"
 
 SRCROOT=$PWD/../aurora-memsnap
 ROCKSDIR="$PWD/rocksdb"
