--- a/sqlite/sqlite.config
+++ b/sqlite/sqlite.config
@@ -4,14 +4,14 @@ SLS_BRANCH=sls
 SRCROOT="$PWD/../aurora-memsnap"
 
 # Disk setup
-ALLDISKS="nvd0 nvd1"
+ALLDISKS="$DISK1 $DISK2"
 
 # Mountpoint for Aurora
 MNT=/testmnt
 AURMNT=$MNT
 
 # Aurora disk
-AURDISKS="nvd0 nvd1"
+AURDISKS="$DISK1 $DISK2"
 AURSTRIPE="st0"
 AURPATH="/dev/stripe/$AURSTRIPE"
 DISKPATH=$AURPATH
@@ -19,10 +19,7 @@ DISKPATH=$AURPATH
 LOG=$(pwd)/aurora.log
 
 # Used for the SLOS for non-transparent checkpointing
-CKPTDISKS="nvd0 nvd1"
-
-# Used for the WAL for non-transparent checkpointing
-WALDISKS="nvd2 nvd3"
+CKPTDISKS="$DISK1 $DISK2"
 
 # Path for the SLOS
 CKPTSTRIPE="st0"
