add utility functions for setting up SOSP-time Aurora

--- a/rocksdb/rocksdb.config
+++ b/rocksdb/rocksdb.config
@@ -18,6 +18,7 @@ DISKPATH="/dev/stripe/st0"
 ALLDISKS="$DISK1 $DISK2"
 
 SRCROOT=$PWD/../aurora-memsnap
+OLDAUR=$PWD/../aurora-original
 ROCKSDIR="$PWD/rocksdb"
 
 # Log used when running benchmarks
