[WIP] add objsnap and get Figure 1 microbenchmark working with all MemSnap flavors

--- a/.gitignore
+++ b/.gitignore
@@ -43,6 +43,8 @@ microbenchmarks/multisas
 microbenchmarks/old
 microbenchmarks/sastrack
 microbenchmarks/wal
+microbenchmarks/memsnap-objsnap-combo
+microbenchmarks/tmp
 
 **/*.swp
 **/appendonlydir
