--- a/sqlite/sqlite.config
+++ b/sqlite/sqlite.config
@@ -29,6 +29,10 @@ DISKPATH="/dev/stripe/st0"
 WALSTRIPE="st1"
 WALPATH="/dev/stripe/st1"
 
+OBJSNAP_MD_NUM="0"
+OBJSNAP_MD_SIZE="20G"
+OBJSNAP_MD_PATH="/dev/md$OBJSNAP_MD_NUM"
+
 ROCKSDIR="$PWD/rocksdb"
 
 # Log used when running benchmarks
