RocksDB and SQLite running

--- a/rocksdb/rocksdb.config
+++ b/rocksdb/rocksdb.config
@@ -37,6 +37,11 @@ MIN_FREQ=10
 ROCKSDB_NUM=20000000
 ROCKSDB_DUR=15
 
+# Memory disk config for ObjSnap root
+OBJSNAP_MD_NUM="0"
+OBJSNAP_MD_SIZE="20G"
+OBJSNAP_MD_PATH="/dev/md$OBJSNAP_MD_NUM"
+
 MAX_ITER=0
 
 BASEDB_BENCH_ARGS=" \
